--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb+srv://SanAdmin:10011755990608@cluster0.g3ijqyk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=claveultrasecreta123
+
+# Credenciales para el envío de correos (usa una App Password de Gmail)
+EMAIL_USER=caveutest@gmail.com
+EMAIL_PASS=dwas gqgk jivy pzbo
